--- a/css/sttyle.css
+++ b/css/sttyle.css
@@ -1,6 +1,10 @@
 
 /* no utilice reseteo por que no me gusto el resultado que daba. */
 
+body header{
+    background-color: rgba(238, 209, 45, 0.747);
+;} 
+
 body{
     background-color: rgb(238, 238, 188);
 }
@@ -11,27 +15,24 @@ section{
 
 /* CCS DE SECCION NUESTROS CAFES */
 .imagencafe{
-    background-color: rgb(231, 238, 188);
+    background-color: rgb(3, 3, 3);;
     height: 500px;
-
     background-image: url(../images/cafecolombia.jpeg);
     background-size:contain;
     background-repeat: no-repeat;
 }
 
 .cafeperu {
-    background-color: rgb(231, 238, 188);
+    background-color: rgb(3, 3, 3);
     height: 500px;
-
     background-image: url(../images/cafe\ peru.jpeg);
     background-size:contain;
     background-repeat: no-repeat;
 }
 
 .cafebrasil {
-    background-color: rgb(231, 238, 188);
+    background-color: rgb(3, 3, 3);;
     height: 500px;
-
     background-image: url(../images/cafe\ brasil.jpeg);
     background-size:contain;
     background-repeat: no-repeat;
@@ -40,6 +41,7 @@ section{
 /*  CSS DE INDEX */
 .caja{
 width:600px ;
+height: 100%;
 overflow: auto;
 }
 
@@ -50,6 +52,8 @@ overflow: auto;
 
 .fotoindex{
     padding-left: 400px;
+    margin-left: auto;
+    margin-bottom: auto;
 }
 
 /*  CSS FOOTER */
@@ -124,14 +128,10 @@ header nav  ul{
     gap: 20px;
 }
 
-body header{
-    background-color: rgba(238, 209, 45, 0.747);
-;}
-
 .aline {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    
 }
 
 .portadanuestros{
@@ -140,27 +140,14 @@ body header{
 }
 
 /* DISPOSITIVO MOVIL */
-img{
-    max-width: 100%;
-}
-
-.galeriamovil{
-    text-align: center;
-    padding: 16px;
-
-}
-
-@media (min-width:768px){}
-
-.galeriamovil2{
-    display: grid;
-    grid-template-columns: (50% 50%);
-    grid-template-rows:(1fr 1fr)
+@media (min-width:378px) and (max-width: 992px){
+    .dispositivomobile{
+        height: initial;
+        text-align: center;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem
+        ;
+    }
     
-}
-.galeriamovil2 img{
-    height: 100%;
-    width: 100%;
-}
-
-@media(min-width: 1200px){}
